# Drink-Cooling-Visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  CustomPaths.props  Drink Cooling Visaulizer.vcxproj  Drink Cooling Visaulizer.vcxproj.filters  Drink Cooling Visualizer.sln  Icon.h  Main.cpp  README.md  ReadMe.md
.github/workflows/: cmake-linux.yml  cmake-wasm.yml  cmake-windows.yml
Shaders/: Map.fs
assets/: Drink.vs  Map.fs  Map.vs
resources/: Drink.fs  Drink.vs  Map.vs
src/: Calculating.cpp  Calculating.h  Drawer.cpp  Drawer.h  Drawing.cpp  Drawing.h  DrinkCooling.cpp  DrinkCooling.h  GeometricProperties.cpp  GeometricProperties.h  Icon.h  Main.cpp  MainLogic.cpp  MainLogic.h  MaterialProperties.h  ProcessProperties.h  Snapshot.cpp  Snapshot.h  Windowing.cpp  Windowing.h
src/dcv/: Calculating.cpp  Drawer.cpp  Drawer.h  Drawing.cpp  DrinkCooling.cpp  DrinkCooling.h  EmscriptenGlue.h  GeometricProperties.cpp  GeometricProperties.h  Main.cpp  MainLogic.cpp  MaterialProperties.cpp  ProcessProperties.cpp  Shader.h  Snapshot.cpp  Snapshot.h  Windowing.cpp
